--- a/findTeamFront/package.json
+++ b/findTeamFront/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "qs": "^6.11.2",
     "vant": "^4.6.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
